Bug 6140 - Timer list corruption when starting bridge
Summary: Timer list corruption when starting bridge
Status: RESOLVED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Other (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Stephen Hemminger
URL:
Keywords:
: 6156 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-02-27 20:25 UTC by Stephen Hemminger
Modified: 2006-03-04 05:04 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.16-rc5
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Stephen Hemminger 2006-02-27 20:25:07 UTC
Most recent kernel where this bug did not occur: 2.6.14 ok
Distribution: Ubunutu 5.1
Hardware Environment: 2CPU Xeon
Software Environment:
Problem Description:

After setting up bridge, panic when starting up.


Steps to reproduce:
# brctl addbr br0
# brctl setfd br0 0
# brctl addif br0 eth0
# dhclient br0
Comment 1 Stephen Hemminger 2006-03-03 10:20:27 UTC
*** Bug 6156 has been marked as a duplicate of this bug. ***
Comment 2 Stephen Hemminger 2006-03-03 11:05:33 UTC
Patch submitted to fix for 2.6.16
  [PATCH 1/3] bridge: fix crash in STP
Comment 3 Pawel Staszewski 2006-03-04 05:04:11 UTC
Only for info:
On x86_64 arch machine the same problem 
http://194.6.246.25/x86-panic.jpg

Note You need to log in before you can comment on or make changes to this bug.